Post: CoreLMS Part 4

--- a/content/posts/2020-08-06---CoreLMS-3.md
+++ b/content/posts/2020-08-06---CoreLMS-3.md
@@ -9,7 +9,7 @@ tags:
   - "Open Source"
   - "ASP.Net Core"
   - "TDD"
-description: "A discussion of the functionality goals for the CoreLMS project and getting the solution setup for \"clean code\" success."
+description: "This week's session focused on fleshing out entities and getting started with TDD to develop our first business logic service the RIGHT way."
 ---
 
 If you want to build up your tolerance for looking like an idiot (everyone should), try implementing something you're just beginning to learn [live on Twitch](https://twitch.tv/fitzycodesthings)....
