--- a/content/posts/2020-08-12---CoreLMS-4.md
+++ b/content/posts/2020-08-12---CoreLMS-4.md
@@ -26,9 +26,9 @@ Check out [the project on Github](https://github.com/FitzyCodesThings/core-lms)
 
 ## Skip to the Good Stuff
 
-- Configuring logging []()
-- Adding a custom exception []()
-- TDD/Next Services []()
+- Configuring logging [5:43](https://youtu.be/nubSZ52fL_k?t=343)
+- Adding a custom exception [24:51](https://youtu.be/nubSZ52fL_k?t=1491)
+- TDD/Next Services [30:47](https://youtu.be/nubSZ52fL_k?t=1847)
 
 ## Project Update
 
