--- a/content/posts/2020-08-12---CoreLMS-4.md
+++ b/content/posts/2020-08-12---CoreLMS-4.md
@@ -65,7 +65,7 @@ The light bulb began to go off when my good friend TheGrumpyGameDev in chat conf
 
 (Not saying this is true 100% of the time, but it certainly applies in this case.)
 
-The logging in this instance should occure (IF REQUIRED) in whatever calling code catches the exception.
+The logging in this instance should occur (IF REQUIRED) in whatever calling code catches the exception.
 
 In some situations, the exception may be perfectly acceptable, so why would I log a warning about that?
 
@@ -94,3 +94,5 @@ Looking forward to the pace picking up and getting through the basic infrastruct
 Until next time!
 
 \- John
+
+[Discuss it on Dev](https://dev.to/fitzycodesthings/corelms-logging-custom-exceptions-and-more-tdd-jpp)
