--- a/content/posts/2020-08-19---CoreLMS-5.md
+++ b/content/posts/2020-08-19---CoreLMS-5.md
@@ -86,7 +86,7 @@ Implementing softdeletes in EF Core is pretty simple on the surface.
 
 Seems simple enough, but I encountered an odd scenario if that's all you do to update deleted entities in an already-built project that I'm updating to .Net Core.
 
-The long and short of it is: if an entity you soft delete is contained in an `ICollection` navigation property of a parent object (only scenario I've test so far), the soft-deleted entry **will not be removed from the parent collection** as long as you're using the same scoped instance of the DbContext (so during the same web request, in the same `using` block, etc.).
+The long and short of it is: if an entity you soft delete is contained in an `ICollection` navigation property of a parent object (only scenario I've tested so far), the soft-deleted entry **will not be removed from the parent collection** as long as you're using the same scoped instance of the DbContext (so during the same web request, in the same `using` block, etc.).
 
 I've detailed the issue and linked a demonstration project in the [GitHub issue here](https://github.com/dotnet/efcore/issues/22103), but let me know if you've run into this and how you solved it.
 
@@ -123,4 +123,4 @@ Until next time!
 
 \- John
 
-[Discuss it on Dev](https://dev.to/fitzycodesthings/)
+[Discuss it on Dev](https://dev.to/fitzycodesthings/corelms-to-dto-or-not-to-dto-that-is-the-question-among-other-thoughts-54o0)
