--- a/content/posts/2020-09-18---CoreLMS-6.md
+++ b/content/posts/2020-09-18---CoreLMS-6.md
@@ -85,4 +85,4 @@ Until next time folks!
 
 \- Fitzy
 
-[Discuss it on Dev](https://dev.to/fitzycodesthings/)
+[Discuss it on Dev](https://dev.to/fitzycodesthings/corelms-custom-validation-razor-pages-dtos-and-first-ui-working-2cf)
